--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,16 @@
 <div class="cont">
 <img class="background-img" src="img/bg1.jpg">
       <div class="login">
-        <h3>Kirjaudu sisään</h3><br /><br />
+        <h1>MEMOFY</h1>
+        <h4>Kirjaudu sisään</h4>
         <form action="/login" method="post">
             <input class="u-full-width" type="text" placeholder="Käyttäjätunnus" name="username">
             <input class="u-full-width" type="password" placeholder="Salasana" name="password">
-
+            {{#if flash}}
+            <p class="error">
+              {{flash.error}}
+            </p>
+            {{/if}}
             <div class="u-full-width">
               <a class="button button u-pull-left" href="/register">Rekisteröidy</a>
               <button class="button button-primary u-pull-right">Kirjaudu</button>
