--- a/public/css/skeleton.css
+++ b/public/css/skeleton.css
@@ -28,7 +28,7 @@
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.container {
+.container1 {
   position: relative;
   width: 100%;
   max-width: 960px;
