--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,26 +1,27 @@
+<script src="https://npmcdn.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
 <script src="js/profile.js"></script>
 <div class="cont">
-<img class="background-img" src="img/bg1.jpg">
-<div class="topbar">
-  <div class="logo u-pull-left">
-    <h1>MEMOFY</h1>
-  </div>
-  <div class="navi u-pull-right">
-    <button class="button-primary" id="btn-test">Tallenna</button>
-    <a id="addNewList">
-      <i class="big icons">
-        <i class="link add icon"></i>
-      </i>
-    </a>
-    <a href="/logout">
-      <i class="big icons">
-        <i class="sign link out icon"></i>
-      </i>
-    </a>
-  </div>
-</div>
-
-  <div class="container">
+  <!--<img class="background-img" src="img/bg1.jpg">-->
+  <div class="topbar">
+    <div class="logo u-pull-left">
+      <h1>MEMOFY</h1>
+    </div>
+    <div class="navi u-pull-right">
+      <button class="button-primary" id="btn-test">Tallenna</button>
+      <button class="button-primary" id="btn-add-existing">Lisää lista</button>
+      <a id="addNewList">
+        <i class="big icons">
+          <i class="link add icon"></i>
+        </i>
+      </a>
+      <a href="/logout">
+        <i class="big icons">
+          <i class="sign link out icon"></i>
+        </i>
+      </a>
+    </div>
+  </div><br><br>
+  <div class="container" style="padding-left:5%;">
     <!-- columns should be the immediate child of a .row -->
     <div class="row content">
       <!--<div class="four columns memo"> TÄÄ ON VANHENTUNUT MALLI
