--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,9 @@
   src: url("fonts/amaticsc-regular.eot?#iefix") format("embedded-opentype"), url("fonts/amaticsc-regular.woff2") format("woff2"), url("fonts/amaticsc-regular.woff") format("woff"), url("fonts/amaticsc-regular.ttf") format("truetype"), url("fonts/amaticsc-regular.svg#amatic_scregular") format("svg");
   font-weight: normal;
   font-style: normal; }
+body {
+  background: url("../img/bg1.jpg") fixed; }
+
 a {
   color: #4b4bff; }
 
@@ -21,6 +24,7 @@ h1 {
 .topbar {
   width: 100%;
   position: fixed;
+  z-index: 100;
   height: 6rem; }
   .topbar .logo {
     margin-left: 2rem; }
@@ -48,7 +52,6 @@ h1 {
   height: auto;
   border-radius: 5px;
   color: white;
-  /*text-shadow: 0px 0px 2px rgba(0,0,0,.2);*/
   padding: 5px 5px 0px 5px;
   overflow: hidden;
   margin-top: 2rem; }
@@ -77,6 +80,8 @@ h1 {
     color: #ff7d7d; }
   .memo .addnew {
     text-align: center; }
+  .memo .name input {
+    font-size: 3.0rem; }
   .memo ul {
     list-style: none;
     width: 100%;
