--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,11 @@
 
 }
 
+
+body {
+  background: url('../img/bg1.jpg') fixed;
+}
+
 a {
   color: rgb(75,75,255);
 }
@@ -36,6 +41,7 @@ h1 {
 .topbar{
   width: 100%;
   position: fixed;
+  z-index: 100;
   height: 6rem;
   .logo{
     margin-left: 2rem;
@@ -60,12 +66,14 @@ h1 {
 .header {
   height: 7rem;
 
-
-
   h4 {
       line-height: 7rem;
       vertical-align:bottom;
   }
+}
+
+.container {
+
 }
 
 .memo {
@@ -75,7 +83,6 @@ h1 {
   height: auto;
   border-radius: 5px;
   color: white;
-  /*text-shadow: 0px 0px 2px rgba(0,0,0,.2);*/
   padding: 5px 5px 0px 5px;
   overflow: hidden;
 
@@ -120,6 +127,11 @@ h1 {
     text-align: center;
   }
 
+  .name {
+    input{
+      font-size: 3.0rem;
+    }
+  }
   ul {
     list-style: none;
     width: 100%;
@@ -181,6 +193,7 @@ h1 {
 .cont{
   height: 100vh;
   width: 100vw;
+
 
   .background-img{
     position: absolute;
