--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -23,7 +23,7 @@
   </div><br><br>
   <div class="container" style="padding-left:5%;">
     <!-- columns should be the immediate child of a .row -->
-    <div class="row content">
+    <div class="row2 content">
       <!--<div class="four columns memo"> TÄÄ ON VANHENTUNUT MALLI
         <h4 class="u-pull-left" id="name">Ostoslista</h4><i class="link large add user icon"></i>
         <ul>
