--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/icon.min.css">
+  <link rel="stylesheet" href="css/tooltipster.css" />
 
   <link rel="stylesheet" href="css/style.css">
   <!-- Favicon
@@ -29,6 +30,8 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="js/pace.js"></script>
+  <script src="https://npmcdn.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
+  <script type="text/javascript" src="js/jquery.tooltipster.min.js"></script>
 </head>
 <body>
 
