--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,3 @@
-<script src="https://npmcdn.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
 <script src="js/profile.js"></script>
 <div class="cont">
   <!--<img class="background-img" src="img/bg1.jpg">-->
@@ -8,13 +7,18 @@
     </div>
     <div class="navi u-pull-right">
       <button class="button-primary" id="btn-test">Tallenna</button>
-      <button class="button-primary" id="btn-add-existing">Lisää lista</button>
-      <a id="addNewList">
+      <!--<button class="button-primary" id="btn-add-existing">Lisää lista</button>-->
+      <a id="addNewList" class="tooltip" title="Lisää tyhjä lista">
         <i class="big icons">
           <i class="link add icon"></i>
         </i>
       </a>
-      <a href="/logout">
+      <a id="btn-add-existing" class="tooltip" title="Lisää jaettu lista">
+        <i class="big icons">
+          <i class="link add user icon"></i>
+        </i>
+      </a>
+      <a href="/logout" class="tooltip" title="Kirjaudu ulos">
         <i class="big icons">
           <i class="sign link out icon"></i>
         </i>
