Tallenna-nappi pois

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,8 +6,8 @@
       <h1>MEMOFY</h1>
     </div>
     <div class="navi u-pull-right">
-      <button class="button-primary" id="btn-test">Tallenna</button>
-      <!--<button class="button-primary" id="btn-add-existing">Lisää lista</button>-->
+      <!--<button class="button-primary" id="btn-test">Tallenna</button>
+      <button class="button-primary" id="btn-add-existing">Lisää lista</button>-->
       <a id="addNewList" class="tooltip" title="Lisää tyhjä lista">
         <i class="big icons">
           <i class="link add icon"></i>
