Takaisin-nappi rekisteröinti sivulle

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -9,6 +9,7 @@
             <input class="u-full-width" id="pass1" type="password" placeholder="Salasana" name="password">
             <input class="u-full-width" id="pass2" type="password" placeholder="Toista salasana" name="passwordvalid">
             <div class="u-full-width">
+              <a class="button button u-pull-left" href="/">Takaisin</a>
               <button class="button button-primary u-pull-right">Rekisteröidy</button>
             </div>
         </form>
