--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="cont">
-<img class="background-img" src="img/bg1.jpg">
+<!--<img class="background-img" src="img/bg1.jpg">-->
       <div class="login">
         <h1>MEMOFY</h1>
         <h4>Kirjaudu sisään</h4>
