--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,6 @@
 <script src="js/validate.js"></script>
 <div class="cont">
-<img class="background-img" src="img/bg1.jpg">
+<!--<img class="background-img" src="img/bg1.jpg">-->
       <div class="login">
           <h1>MEMOFY</h1>
           <h4>Rekisteröidy</h4>
